# MiniGPTEngine-CPP

./: .gitignore  ACTUAL_PERFORMANCE_RESULTS.md  ADVANCED_FEATURES_SUMMARY.md  BUILD_FIXED_OPTS.md  CMakeLists.txt  COMPLETE_GITHUB_FIX.md  FIXED_OPTIMIZATIONS.cpp  GITHUB_COMMIT_MESSAGE.md  Makefile  PERFORMANCE_VALIDATION.md  QUICK_APPLE_SILICON_TEST.sh  QUICK_FIX.cpp  QUICK_TEST_APPLE_SILICON.md  README.md  TEST_FIXED_OPTIMIZATIONS.sh  TEST_WORLD_CLASS.sh  accelerate_test.cpp  advanced_m2_test.cpp  advanced_throughput_test.cpp  apple_m2_advanced.cpp  apple_m2_optimized.cpp  apple_m2_test.cpp  apple_m2_vector_test.cpp  apple_silicon_vector_test.cpp  build_accelerate_test.sh  build_and_test_apple_silicon.sh  build_apple_m2.sh  build_complex_test.sh  build_lightgpt.sh  commit_to_github.sh  complex_m2_test.cpp  complex_test.cpp  comprehensive_validation.cpp  extreme_performance_test.cpp  fixed_optimizations  full_transformer.cpp  interactive_test.cpp  quick_fix  quick_test.cpp  real_inference  (+32 more)
cmake/: lightgptConfig.cmake.in  lightgptConfigVersion.cmake
examples/: CMakeLists.txt  basic_usage.cpp
include/lightgpt/: advanced_inference.hpp  extreme_optimizations.hpp  int4_quantization.hpp  kv_cache.hpp  model_loader.hpp  optimizations.hpp  slice.hpp  tensor.hpp  tensor_ops.hpp  throughput_optimizer.hpp  tokenizer.hpp  transformer.hpp  types.hpp
src/: CMakeLists.txt  kv_cache.cpp  main.cpp  model_loader.cpp  model_loader_impl.cpp  tensor.cpp  tensor_ops.cpp  tensor_ops_impl.cpp  tokenizer.cpp  transformer.cpp
test/: CMakeLists.txt  test_fixes.cpp  test_model_loader.cpp  test_tensor.cpp  test_tokenizer.cpp  test_transformer.cpp
test/models/: test_model.gguf
